replace logo, favicon, and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,22 @@
     <meta name="theme-color" content="#000000" />
     <meta
       property="og:title"
-      content="Complete tasks and get paid with Bitcoin"
+      content="Get paid with Bitcoin while contributing to the Psilocybin Citadel"
     />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://nostr.build/i/nostr.build_8ed2bdd79901d93c709cf81f2718c11cd5f06c286831f871d024ec05c0c93d8e.png"
+      content="https://i.imgur.com/8i3yaAQ.png"
     />
     <meta
       property="og:description"
       content="find a bounty and start earning..."
     />
-    <meta property="og:url" content="https://nostrbounties.com" />
+    <meta property="og:url" content="https://psitadelbounties.com" />
 
     <meta
       name="description"
-      content="NostrBounties: complete tasks and get paid with Bitcoin"
+      content="PsitadelBounties:Get paid with Bitcoin while contributing to the Psilocybin Citadel"
     />
 
     <!--
@@ -40,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>NostrBounties: complete tasks and get paid with Bitcoin ₿</title>
+    <title>PsitadelBounties: Get paid with Bitcoin ₿ while contributing to the Psilocybin Citadel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
